# sandy

./: ;a  Cargo.toml  README.md
lua/: .luarc.json  0.hello choom.lua  1.sandy project.lua  2.chrome.lua  3.plot and camera.lua  4.transform.lua  4.transform2.lua  5.2R robot.lua  main.lua  util.lua
lua/lib/: sandy.lua
lua/meta/: camera.lua  sandy.lua
manual/: doc.md  tour.md
sandy/: Cargo.toml
sandy/src/: camera.rs  channel.rs  chrome.rs  config.rs  console.rs  dance.rs  lua.rs  main.rs  plotter.rs  runner.rs  ztransform.rs
script/: lua-doc-gen.sh  release.sh
