[workspace]
resolver = "2"
members = ["sandy"]

[workspace.dependencies]
bevy = { version = "0.15", features = [
  "dynamic_linking",
  "bevy_pbr",
  "bevy_gilrs",
  ] }
bevy_egui = { version = "0.31" }
egui_file = { version = "0.19.0" }
egui_extras = { version = "0.29.0", features = ["syntect"] }
egui_plot = { version = "0.29.0" }
eframe = { version = "0.29" }

serde = { version = "*" , features = ["derive"]}
serde_json = { version = "*" }

dirs = { version = "5.0.1" }

mlua = { version = "0.10.2", features = ["lua54", "vendored", "send", "error-send", "serialize"] }

notify = { version = "7.0.0" }

# interprocess = { version = "2.2.2" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
