[package]
name = "sandy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
mlua = { workspace = true }
egui_file = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }
eframe = { workspace = true }
dirs = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

notify = { workspace = true }

[dev-dependencies]
bevy = { version = "0.15", features = [
  "dynamic_linking",
  "bevy_pbr",
  "bevy_gilrs",
  ] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
